--- a/pwp.tex
+++ b/pwp.tex
@@ -21,31 +21,22 @@
 This chapter discusses the properties of the target language \progLang{Prolog} and the feature set that will be translated to the host 
 language to extend its capabilities.
 
-\begin{enumerate}
-\item Why a logic programming language?
-Our base language\yyy{;}{,} \progLang{Haskell}\yyy{}{,} is from the same
-paradigm.  
+\paragraph{Why a logic programming language?}
+Our base language, \progLang{Haskell}, is from the same paradigm. It would be interesting to see how two languages of the same family with 
+conflicting features can be made to work together.
 
-It would be interesting to see how two languages of the same family with conflicting features can be made to work together.
-
-
-
-\item \progLang{Prolog} as a logic programming language.
-
-  \progLang{Prolog} is a general purpose logic programming language mainly used in artificial intelligence and
+\paragraph{\progLang{Prolog} as a logic programming language}
+\progLang{Prolog} is a general purpose logic programming language mainly used in artificial intelligence and
   computational linguistics.
-  It is a declarative language\yyy{}{\Large,} i.e.\yyy{}{\Large,} a program is a set of facts an rules running a
+  It is a declarative language, i.e., a program is a set of facts an rules running a
   query on which will return a result.
   The relation between them is defined by clauses using \textit{Horn Clauses}\cite{wikiprolog}.
   \progLang{Prolog} is very popular and has a number of implementations
   \cite{website:comparisonofprologimplementationswiki} for different purposes.
 
-\item Why embed \progLang{Prolog} ?
 
-\begin{enumerate}
-
-
-\item Existing Implementations\endnote{%
+\paragraph{Why embed \progLang{Prolog} ?}
+Existing implementations\endnote{%
   The surrounding \macroName{begin}\macroArg{enumerate} should be a
   \texttt{description} environment, or a list of
   \macroName{sub}\textsuperscript{\textasteriskcentered}\texttt{section}'s.
@@ -54,39 +45,34 @@ It would be interesting to see how two languages of the same family with conflic
 As a starting point a few publications and implementations helped in exploring the topic. The shortcomings were clearly visible to work and
 improve upon giving a starting point.
 
-\item Simple Syntax
+
+\paragraph{Simple Syntax}
 \cite{wikiprolog}
 
 Prolog is dynamically typed. It has a single data type, the term, which has several subtypes: atoms, numbers, variables and compound terms.
 
-An atom is a general-purpose name with no inherent meaning. It is composed of a sequence of characters that is parsed by the Prolog\endnote{%
-  Use \macroName{progLang}!
-}
+An atom is a general-purpose name with no inherent meaning. It is composed of a sequence of characters that is parsed by the 
+\progLang{Prolog}
 reader 
 as a single unit.
 
-Numbers can be floats or integers. Many Prolog\endnote{%
-  Use \macroName{progLang}!
-}
+Numbers can be floats or integers. Many \progLang{Prolog}
  implementations also provide unbounded integers and rational numbers.
 
 Variables are denoted by a string consisting of letters, numbers and underscore characters, and beginning with an upper-case letter or 
 underscore. Variables closely resemble variables in logic in that they are placeholders for arbitrary terms. A variable can become 
 instantiated (bound to equal a specific term) via unification.
 
-A compound term is composed of an atom called a ``functor'' and a number of ``arguments'', which are again terms. Compound terms are ordinarily 
+A compound term is composed of an atom called a ``functor'' and a number of ``arguments'', which are again terms. Compound terms are 
+ordinarily 
 written as a functor followed by a comma-separated list of argument terms, which is contained in parentheses. The number of arguments is 
 called the term's arity. An atom can be regarded as a compound term with arity zero.
 
 Prolog programs describe relations, defined by means of clauses. Pure Prolog is restricted to Horn clauses, a Turing-complete subset of 
 first-order predicate logic. There are two types of clauses: Facts and rules.
 
-
-
 \cite{website:prologintroumiami}
-In \progLang{Prolog}\endnote{%
-  Use \macroName{progLang}!
-}
+In \progLang{Prolog}
  all data objects are called terms
  Atomic terms
  %% TODO. 2016-01-16.  junk above
@@ -138,9 +124,7 @@ _
 Variables in Prolog are rather different to those in most other languages. Further discussion and use is deferred until later.
 
 
-
-
-\item Simple Semantics
+\paragraph{Simple Semantics}
 
 Under a declarative reading, the order of rules, and of goals within rules, is irrelevant since logical disjunction and conjunction are 
 commutative.
@@ -189,17 +173,15 @@ The constraint in the head of a rule Identifier can only match a passive constra
 
 \end{enumerate}
 
-\item Universal Horn Clauses
+\paragraph{Universal Horn Clauses}
 
 
-\item Unification
+\paragraph{Unification}
 
-\item Definite Clause Grammar
+\paragraph{Definite Clause Grammar}
 
 
-\end{enumerate}
 
-\end{enumerate}
 
 
 \section{Chapter Recapitulation}
