--- a/background.tex
+++ b/background.tex
@@ -15,6 +15,7 @@
 \noindent\rule{\textwidth}{0.5pt}
 %-----------------------------------------------------------------------------
 
+\section{Languages and their classification}
 Programming languages fall into different categories also known as ``paradigms''.
 They exhibit different characteristics according to the paradigm they fall into.
 It has been argued \cite{Krishnamurthi:2008:TPL:1480828.1480846} that rather than classifying a language into a
@@ -56,6 +57,7 @@ A program is a set of rules and formul\ae{} in symbolic logic that are used to d
 ones.
 This is done until the one which gives the solution is not derived.
 
+\section{\progLang{Haskell} and \progLang{Prolog}}
 In this thesis we aim to merge two languages
 together and produce a result which exhibits hybrid
 properties.
@@ -120,34 +122,18 @@ The \progLang{Prolog} language has been partially implemented \cite{swipembedd} 
 \cite{komorowski1982qlog,robinson1982loglisp,robinson1980loglisp}, \progLang{Java} \cite{wikiprolog, jlog},
 \progLang{JavaScript} \cite{jscriptlog} and the list \cite{yieldprolog} goes on.
 
+\section{Approaches to integration}
+
 The technique of embedding is a shallow one.
 It is as if the embedded language floats over the host language.
 Other approaches provide deeper integration between the target and the host.
 Here we look at a few.
 Over time there has been an approach that branches out, which is paradigm integration.
-A lot of work has been done on Unifying the Theories of Programming
-\cite{DBLP:conf/utp/2006,DBLP:conf/utp/2008,DBLP:conf/utp/2010,DBLP:conf/utp/2012,hoare1998unifying,
-  gibbons2013unifying}.\endnote{%
-  Perhaps
-  \vspace*{-1\baselineskip}
-  \begin{quote}\itshape
-    A lot of work has been done on Unifying the Theories of Programming
-\cite{DBLP:conf/utp/2006,DBLP:conf/utp/2008,DBLP:conf/utp/2010,DBLP:conf/utp/2012,hoare1998unifying,
-  gibbons2013unifying}.
-  \end{quote}
-  \vspace*{-1\baselineskip}
-  could become
-  \vspace*{-1\baselineskip}
-  \begin{quote}\slshape
-    The First International Symposium on \textit{Unifying the Theories of Programming}
+The First International Symposium on \textit{Unifying the Theories of Programming}
     \textup{(\cite{DBLP:conf/utp/2006})}
     produced a lot of work
     \textup{\cite{DBLP:conf/utp/2008,DBLP:conf/utp/2010,DBLP:conf/utp/2012,hoare1998unifying,
       gibbons2013unifying}}.
-  \end{quote}
-  \vspace*{-1\baselineskip}
-  thereby fixing the capitals.
-}
 Hybrid languages that have characteristics from more than one paradigm are coming into the mainstream.
 One of the more successful attempts is \progLang{Scala} \cite{website:scala}.
 Simply speaking it is like a \textit{functional} \progLang{Java} providing side-effect free programming environment
@@ -165,18 +151,7 @@ Another notable example is the common foreign function interface (CFFI) \cite{we
 As yet another example, \progLang{Java} provides the java native interface(JNI) for the working with other
 languages.
 Moreover there are services that provide a common platform for multiple languages to work with each other.
-They can be termed as multilingual run-times\endnote{%
-  I am not sure which of 
-  \begin{compactitem}
-  \item \textit{run times}  \david{We do not use this one.}
-  \item \textit{run-times}
-  \item \textit{runtimes} \david{Let's pick this one, and use it consistently throughout.}
-  \end{compactitem}
-  is correct.
-  What do basic O/S texts use?
-  ``Multilingual'' is definitely one word.
-  \path!https://en.wikipedia.org/wiki/Run_time_(program_lifecycle_phase)!
-}
+They can be termed as multilingual runtimes
 which lay down a common layer for languages to use each others functions.
 An example for this is the Microsoft common language runtime (CLR) \cite{website:clrwiki} which is an
 implementation of the common language infrastructure (CLI) standard \cite{website:cliwiki}.
@@ -185,27 +160,17 @@ Another important concept is meta programming \cite{website:metaprogwiki}, which
 that write or manipulate other programs.
 The language used to write meta programs is known as the meta language while the the language in which the program
 to be modified is written is the object language.
-If both of them are the same then the language is said to be reflective.\endnote{%
-  I think that this usage of ``reflective'' needs some comment.
-  Usually \textit{reflective} refers to run-time access to information about the object language text;
-  what you are discussing is compile-time access to the object language.\newline
-  \david{Is this your \mehul?????}?}
+Sometimes the meta language and the object language are the same.
 
 \progLang{Haskell} programs can be modified using Template \progLang{Haskell} \cite{website:templatehaskell}, an
 extension to the language which provides services to jump between the two types of programs.
-The abstract syntax tree used to define a grammar is in the form of a \progLang{Haskell} data type which can be
-modified at compile time allowing us to play with the code and going back and forth.\endnote{%
-  The preceding sentence needs fixing.
-\mehul{changed}	\\ \david{Read it out loud.}
-}
+The abstract syntax tree used to define a grammar is in the form of a \progLang{Haskell} data type. This allows us to play with the code and go back and forth betwwen the meta program and the object program.
 
 A specific tool used in meta programming is quasi-quotation \cite{mainland2007s,haskellquasi,wikiquasi}, which
 permits \progLang{Haskell} expressions and patterns to be constructed using domain specific,
 pro\-gram\-mer-de\-fined concrete syntax.
 For example, consider a particular application that requires a complex data type.
-To accommodate the same it has to represented\endnote{%
-  \textit{has to represented}: Do you mean ``\textsl{must be represented}''?
-}
+To accommodate the data type it must be represented
 using \progLang{Haskell} syntax and performing pattern matching may turn into a tedious task.
 So having the option of using specific syntax reduces the programmer from this burden and this is where a
 quasi-quoter comes into the picture.
@@ -243,6 +208,16 @@ The same in \progLang{Haskell} would be of the form:\endnote{%
   \caption{\progLang{Prolog} append function translated to \progLang{Haskell}.}
 \label{tab:prlgappndhskl}
 \end{code-list}
+
+\begin{code-list}[th]
+  \begin{singlespace}
+    \inputminted[linenos]{haskell}{append_quasi_quote.hs}
+  \end{singlespace}
+  \caption{\progLang{Prolog} append function translated to \progLang{Haskell} using quasi quotation.}
+\label{tab:prlgappndhsklqq}
+\end{code-list}
+
+
 
 Listing~\ref{tab:prlgappndhskl} shows \yyy{}{\LARGE !}\endnote{%
   Shows what?
