--- a/introduction.tex
+++ b/introduction.tex
@@ -130,21 +130,17 @@ accomplishing  mundane tasks.
 Approaching towards the solution can be complicated and tiresome, but the programming language in question acts as
 the master key.
 A general purpose language, as the name suggests, provides a general set of tools to cover many problem domains.
-The downside is that such environments\endnote{%
-  Do you mean languages?  If not, what environments are you talking about?
-  \mehul{the programming environment that the embedded language provides as a library}
+The downside is that such general purpose languages\endnote{%
+  \mehul{find a cute metaphor}
 }
-lack the complete feature set which can make problem solving difficult.
+lack tools specific to certain problem domains.
 
 Flipping the coin to the other side, we see, the more specific the language is to the problem domain, the easier it
 is to solve the problem since the solution need not be moulded according to the capability  of the language.
 For example, a problem with a naturally recursive solution cannot take advantage of tail recursion in many
 imperative languages.
-Many domains require the system to be mutation free, but must deal with uncontrolled side-effects and so
-on.\endnote{%
-  \david{This example isn't as clear to me as the one in the last sentence.}
-  \mehul{how do I say that mathematics can be translated to program easily in declarative paradigm}
-}
+Many domains require being able to prove that certain chunks of code are side effect free, but must deal with a 
+language with uncontrolled side effects.
 
 
 The solution is to develop a programming language with a split personality, in our case, sometimes functional,
@@ -214,9 +210,6 @@ Paradigm Languages (Functional Logic Languages).
 Some of the indirectly related content \chapterReference{chap:relatedWork}{Chapter 6} and finishing off with the
 \chapterReference{chap:conclusion}{Chapter 7}, the expected outcomes.
 
-%\section{The Plan}
-
-\section{Chapter Recapitulation}
 
 \ifMain
 \begin{scope}
