added content to relatedWork

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1475,6 +1475,14 @@ url = {http://www.thesoftwareguild.com/history-of-programming-languages/}
   pages={26--36},
   year={2000}
 }
+@book{Sterling:1994:APA:175753,
+ author = {Sterling, Leon and Shapiro, Ehud},
+ title = {The Art of Prolog (2Nd Ed.): Advanced Programming Techniques},
+ year = {1994},
+ isbn = {0-262-19338-8},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+}
 @comment{website:,
 title = ,
 author = ,
