--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -69,7 +69,7 @@ Often this function itself is called the algebra, hence my use of the name alg i
 \section{Monads by example: The State Monad}
 
 
-\begin{code-list}[th]
+\begin{code-list}[H]
   \begin{singlespace}
     \inputminted[linenos, firstline=16, lastline=33]{haskell}{haskell-monad-working-2.hs}
   \end{singlespace}
@@ -77,7 +77,7 @@ Often this function itself is called the algebra, hence my use of the name alg i
 \label{tab:hskllmndworkngdatatype}
 \end{code-list}
 
-\begin{code-list}[th]
+\begin{code-list}[H]
   \begin{singlespace}
     \inputminted[linenos, firstline=35, lastline=65]{haskell}{haskell-monad-working-2.hs}
   \end{singlespace}
@@ -85,7 +85,7 @@ Often this function itself is called the algebra, hence my use of the name alg i
 \label{tab:hskllmndworkngfunctions}
 \end{code-list}
 
-\begin{code-list}[th]
+\begin{code-list}[H]
   \begin{singlespace}
     \inputminted[linenos, firstline=60, lastline=94]{haskell}{haskell-monad-working-2.hs}
   \end{singlespace}
@@ -93,7 +93,7 @@ Often this function itself is called the algebra, hence my use of the name alg i
 \label{tab:hskllmndworkngfunctions}
 \end{code-list}
 
-\begin{code-list}[th]
+\begin{code-list}[H]
   \begin{singlespace}
     \inputminted[linenos, firstline=97, lastline=123]{haskell}{haskell-monad-working-2.hs}
   \end{singlespace}
@@ -101,6 +101,18 @@ Often this function itself is called the algebra, hence my use of the name alg i
 \label{tab:hskllmndworkngexamples}
 \end{code-list}
 
+
+\section{The execution model of \progLang{Prolog} \cite{Sterling:1994:APA:175753}}
+
+\begin{enumerate}
+\item Scheduling policy
+
+Select leftmost goal and replace the non deterministic choice of a clause by sequential search for a unifiable clause and backtracking.
+
+Stack scheduling policy, pop the topmost goal for reduction and push derived goals back.
+
+\item Search strategy
+\end{enumerate}
 
 \section{Chapter Recapitulation}
 
