meeting commit, removed workCompleted and results, adressed some points

--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -86,7 +86,7 @@ discussed below, along with their shortcomings.
 As for the idea of merging paradigms goes, it is not the main focus of this thesis and can be more of an
 ``add-on''.
 A handful of crossover hybrid languages based on \progLang{Haskell} exist,
-\progLang{Curry} \cite{website:curry} being the prominent one.
+\progLang{Curry} \cite{website:curry} being the prominent one.Sterling:1994:APA:175753
 Moving away from \progLang{Haskell} and exploring other languages from different paradigms, a respectable number of
 crossover implementations exist but again most of them have faded out.
 
@@ -122,7 +122,7 @@ Taking into consideration the above, there is quite some room for improvement an
 }\textsuperscript{,}\endnote{%
   Move this sentence to the beginning of the following section.
 }
-
+Sterling:1994:APA:175753
 \section{Things that this thesis fixes}\label{sec:things-fixed}
 
 \david{Here is a discussion of problems mentioned above that this thesis
