--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -102,7 +102,7 @@ Often this function itself is called the algebra, hence my use of the name alg i
 \end{code-list}
 
 
-\section{The execution model of \progLang{Prolog} \cite{Sterling:1994:APA:175753}}
+\section{The execution models of \progLang{Prolog} \cite{Sterling:1994:APA:175753}}
 Two major decisions must be taken for \progLang{Prolog} to resolve a query:
 \begin{enumerate}
 \item Scheduling policy
@@ -131,7 +131,9 @@ a sample trace for a query.
 \label{tab:prlgprgrmtrce}
 \end{code-list}
 
-
+\endnote{
+  \david{say something about cut here}
+}
 
 \section{Chapter Recapitulation}
 
