--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -372,11 +372,11 @@
   \subfile{proto4}
   \clearpage
   	
-  \subfile{workCompleted}
-	\clearpage	
+  %\subfile{workCompleted}
+	%\clearpage	
 	
-	\subfile{results}
-	\clearpage
+	%\subfile{results}
+	% \clearpage
 	
 \subfile{futureScope}
 \clearpage	
