added prototype 1 implementation architecture

--- a/proto1.tex
+++ b/proto1.tex
@@ -239,6 +239,11 @@ We have a \progLang{Prolog}-like language in \progLang{Haskell} defined via \has
 it into a non-recursive data type. Basically we do unification monadically.
 
 \section{Creating a data type}
+\begin{figure}[H]
+  \includegraphics[width=1\textwidth]{prototype_1_implementation_architecture.png}
+  \caption{Prototype 1 Implementation architecture}
+  \label{fig:proto1-impl-arch}
+\end{figure}
 
 To start we need to define a abstract syntax for the \progLang{Prolog}-like language.
 But there is a conflict between the type systems as we shall discuss.
