updated endnote for proto1.tex .

--- a/proto1.tex
+++ b/proto1.tex
@@ -229,8 +229,7 @@ In this prototype we explore the unification aspect only.
 This prototype demonstrates the process of creating a data type to replicate the target language type system while conforming to the host 
 language restrictions by utilizing the
 benefits.\endnote{
-  \david{simplify}
-  \mehul{updated, please review.}
+  \david{``\textit{the benefits}'' of what?}
 }
 
 
