Now watching our "But"s.

--- a/embedding.tex
+++ b/embedding.tex
@@ -201,7 +201,7 @@ need \progLang{Prolog} for it;
 \cite{prolog-lib}
 is the implementation that comes the closest
 to something like an actual practical \progLang{Prolog}.
-But all they give is a small interpreter, none or a few practical features, incomplete support for lists, minor or
+But\butbut{} all they give is a small interpreter, none or a few practical features, incomplete support for lists, minor or
 no \haskellConstruct{monadic} support and \yyy{an}{a} REPL without the ability to ``write a \progLang{Prolog} program
 file''.
 
