--- a/introduction.tex
+++ b/introduction.tex
@@ -68,7 +68,7 @@ The successors attempt to introduce new concepts and features to simplify the pr
 assist the programmer by lessening the burden of carrying out standard tasks and procedures.
 A new one tries to capture the best of the old; learn from the mistakes, add new concepts and move on; which seems
 to be good enough from an evolutionary perspective.
-But all is not that straight forward when shifting from one language to another.
+But\butbut{} all is not that straight forward when shifting from one language to another.
 There are costs and incompatibilities to look at.
 A language might be simple to use and provide better performance than its predecessor but not always be worth the
 switch.
@@ -89,7 +89,7 @@ result it did become the first choice. Some basic requirements such as modules a
 practical features are pushed in now and then which results in the loss of the purely declarative charm. The problem is that \progLang{Prolog} is fading
 away, \cite{website:prolog-steam,website:prolog-death,website:prolog-killer}, not many people use it and most of the times when it is used, the variant
 is usually \textit{practical} \progLang{Prolog} and the area being academia. It is not used for building large programs \cite{wikiprolog,somogyi1995
-logic,website:prolog1000db}. But there are a lot of good things about \progLang{Prolog} that should not die away. Moreover, \progLang{Prolog} is ideal
+logic,website:prolog1000db}. But\butbut{} there are a lot of good things about \progLang{Prolog} that should not die away. Moreover, \progLang{Prolog} is ideal
 for search problems.
 \end{comment}
 
