--- a/proto1.tex
+++ b/proto1.tex
@@ -245,7 +245,7 @@ it into a non-recursive data type. Basically we do unification monadically.
 \end{figure}
 
 To start we need to define a abstract syntax for the \progLang{Prolog}-like language.
-But there is a conflict between the type systems as we shall discuss.
+But\butbut{} there is a conflict between the type systems as we shall discuss.
 
 
 \endnote{
