--- a/toDo.tex
+++ b/toDo.tex
@@ -37,11 +37,7 @@
   Abstract is too long.  (Guidelines limit it to 150 words.  Currently
   at 275-ish.)
 
-\item
-  Remove sentences that begin with ``And''.
-  You may have two in the entire thesis.
-  No more!\label{item:no-and}
-  Also watch out for sentences that begin with ``But''.
+  Watch out for sentences that begin with ``But''.
 
 \item
   Search for all latin abbreviations (\textit{e.g.,} ``i.e.''), and be
