--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -391,7 +391,6 @@
   \input{toDo}
   \clearpage
 
-\addcontentsline{toc}{section}{\numberline\thesection{End Notes}}
 \begin{scope}
   \nolinenumbers
   \enotesize
@@ -399,7 +398,10 @@
   \begin{singlespace}
   \setlength{\parskip}{12pt plus 2pt minus 1pt}
   \begin{scope}
-  \theendnotes
+    \def\enoteheading{\section*{\notesname}%
+      \addtocounter{section}{1}%
+      \addcontentsline{toc}{section}{\numberline\thesection{End Notes}}}
+    \theendnotes
   \end{scope}
   %% dgc 2016-01-09.  If you see an error message that
   %% \begin{scope} is ended by \end{singlespace}, then
