removed the spacing error at line 143 of proto1.tex introduced by 5ab14336c9e8e7ae8bde16e3a8b1fa3970c7a729.

--- a/proto1.tex
+++ b/proto1.tex
@@ -139,7 +139,8 @@ yes
 \item If \mSV{term1} is an uninstantiated variable and \mSV{term2} is any type of term, then \mSV{term1}
   and \mSV{term2} unify, and \mSV{term1} is instantiated to \mSV{term2}\,.
   Similarly, if \mSV{term2} is a variable and \mSV{term1} is any type of term, then \mSV{term1} and \mSV{term2}
-  unify, and \mSV{term2} is instantiated to \mSV{term1}.Consider the examples in Listing~\ref{tab:unificationinglevariable} and 
+  unify, and \mSV{term2} is instantiated to \mSV{term1}.
+  Consider the examples in Listing~\ref{tab:unificationinglevariable} and 
   Listing~\ref{tab:unificationmultiplevariable}. (So if they are both 
 variables, they're both instantiated to each other, and we say that they share values.)
 \par
