Random non-ascii character fixes.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -223,7 +223,7 @@ note={\url{http://vanemden.wordpress.com/2010/08/21/who-killed-prolog/}}
 }
 @inproceedings{somogyi1995logic,
   title={Logic programming for the real world},
-  author={Somogyi, Zoltan and Henderson, Fergus and Conway, Thomas and O’Keefe, Richard},
+  author={Somogyi, Zoltan and Henderson, Fergus and Conway, Thomas and O'Keefe, Richard},
   booktitle={Proceedings of the ILPS},
   volume={95},
   pages={83--94},
@@ -480,7 +480,7 @@ note={\url{http://hackage.haskell.org/package/liquid-fixpoint}}
   organization={ACM}
 }
 @article{ait1999warren,
-  title={Warren’s Abstract Machine A TUTORIAL RECONSTRUCTION},
+  title={Warren's Abstract Machine A TUTORIAL RECONSTRUCTION},
   author={A{\"\i}t-Kaci, Hassan and Des Flambertins, For{\^e}t},
   year={1999},
   publisher={Citeseer}
@@ -530,7 +530,7 @@ note={\url{http://jlogic.sourceforge.net/index.html}}
   year={2001}
 }
 @misc{audklangembedd,
-author="Kurt Nørmark Department of Computer Science Aalborg University Denmark",
+author="Kurt N[\o]rmark Department of Computer Science Aalborg University Denmark",
 title="Linguistic Abstraction",
 year="2013",
 month="July",
@@ -716,7 +716,7 @@ url= {http://en.wikipedia.org/wiki/Prolog}
 }
 @misc{website:scala,
 title = {Scala Programming Language},
-author = {École Polytechnique Fédérale de Lausanne (EPFL) Lausanne, Switzerland},
+author = {\'Ecole Polytechnique F\'ed\'erale de Lausanne (EPFL) Lausanne, Switzerland},
 year = {2002-2014},
 url = {http://www.scala-lang.org/}
 }
@@ -1075,7 +1075,7 @@ url = {http://en.wikipedia.org/wiki/Foreign_function_interface}
 }
 @misc{website:commonlisp,
 title = {Common Lisp Foreign Function Interface},
-author = {James Bielman and Luís Oliveira},
+author = {James Bielman and Lu\'\i{}s Oliveira},
 month = {March},
 year = {2014},
 url = {http://common-lisp.net/project/cffi/}
@@ -1378,7 +1378,7 @@ year = {},
 url = {http://www.thefreedictionary.com/quasi-quotation}
 }
 @misc{website:usementiondistinctionwiki,
-title = {Use–mention distinction},
+title = {Use--mention distinction},
 author = {Wikipedia},
 month = {October},
 year = {2015},
