--- a/quasiquotation.tex
+++ b/quasiquotation.tex
@@ -21,7 +21,8 @@
 \item \cite{website:quotationstanford}
 
 When language is used to attribute properties to language or otherwise theorize about it, a linguistic device is needed that ‘turns\eref{non-ascii} 
-language on itself’. Quotation is one such device. It is our primary meta-linguistic tool.
+language on itself'. 
+Quotation is one such device. It is our primary meta-linguistic tool.
 
 \item \cite{website:quasiquotationfreedictionary}
 
@@ -31,10 +32,10 @@ $\ulcorner$ not p $\urcorner$ refers to the form of any expression consisting of
 
 \item  Quasiquotation Wikipedia, \cite{wikiquasi}
 
-Quasi-quotation or Quine quotation is a linguistic device in formal languages that facilitates rigorous and terse formulation of general rules about linguistic expressions while properly observing the use–mention distinction.
+Quasi-quotation or Quine quotation is a linguistic device in formal languages that facilitates rigorous and terse formulation of general rules about linguistic expressions while properly observing the use--mention distinction.
 
 \cite{website:usementiondistinctionwiki}
-The use–mention distinction is a foundational concept of analytic philosophy,[1] according to which it is necessary to make a distinction 
+The use--mention distinction is a foundational concept of analytic philosophy,[1] according to which it is necessary to make a distinction 
 between using a word (or phrase) and mentioning it
 
 
