--- a/proto4.tex
+++ b/proto4.tex
@@ -23,7 +23,7 @@ So something like a \yyy{"}{``}data\yyy{"}{''} declaration for IO operations
 \cite{website:ioispurechristaylor}
 
 A common question amongst people learning Haskell is whether I/O is pure or not. Haskell advertises itself as a purely functional 
-programming language, but I/O looks like it’s\eref{non-ascii} inherently impure - for example, the function getLine, which gets a line from stdin, returns 
+programming language, but I/O looks like it's inherently impure - for example, the function getLine, which gets a line from stdin, returns 
 a different result depending on what the user types:
 
 \begin{minted}[linenos]{haskell}
@@ -35,11 +35,11 @@ Prelude> x
 
 How can this possibly be pure?
 
-In this post I want to explain exactly why I/O in Haskell is pure. I’ll do it by building up data structures that represent blocks of code. 
-These data structures can later be executed, and they cause effects to occur - but until that point we’ll always work with pure functions, 
+In this post I want to explain exactly why I/O in Haskell is pure. I'll do it by building up data structures that represent blocks of code. 
+These data structures can later be executed, and they cause effects to occur - but until that point we'll always work with pure functions, 
 never with effects.
 
-Let’s look at a simplified form of I/O, where we only care about reading from stdin, writing to stdout and returning a value. We can model 
+Let's look at a simplified form of I/O, where we only care about reading from stdin, writing to stdout and returning a value. We can model 
 this with the \markWord{IOAction} data type.
 
 That is, an \markWord{IOAction} is one of the following three things:
@@ -81,7 +81,7 @@ following type:
 We want to take the \markWord{IOAction} \markWord{a} supplied in the first argument, get its return value (which is of type \markWord{a}) and feed that to the function in 
 the second argument, getting an \markWord{IOAction} \markWord{b} out, which can be sequenced with the first \markWord{IOAction} \markWord{a}.
 
-That’s a bit of a mouthful, but writing this combinator isn’t too hard. When we reach the final \markWord{Return}, we apply the function \markWord{f} to get a 
+That's a bit of a mouthful, but writing this combinator isn't too hard. When we reach the final \markWord{Return}, we apply the function \markWord{f} to get a 
 new action. For the other constructors, we keep the form of the action the same, and just thread seqio through the seqio constructor.
 
 Using \markWord{seqio} we can define the action that gets input from \markWord{stdin} and immediately prints it to
@@ -98,7 +98,7 @@ hello = put "What is your name?"      `seqio` \_    ->
         put ("Hello " ++ name ++ "!") `seqio` \_    ->
         put ("You are " ++ age ++ " years old")
 \end{minted}
-Although this looks like imperative code (admittedly with pretty unpleasant syntax), it’s really a value of type \markWord{IOAction} \Verb!()!. In Haskell,\endnote{%
+Although this looks like imperative code (admittedly with pretty unpleasant syntax), it's really a value of type \markWord{IOAction} \Verb!()!. In Haskell,\endnote{%
   Use \macroName{progLang}!
 }
 code can be data and data can be code.
@@ -108,7 +108,7 @@ In the gist\endnote{%
   natural English meaning.
   You'll need to explain this usage.
 }
- I’ve defined a function to convert an \markWord{IOAction} to a \markWord{String}, which allows them to be printed, so you can load the file into \markWord{GHCi} 
+ I've defined a function to convert an \markWord{IOAction} to a \markWord{String}, which allows them to be printed, so you can load the file into \markWord{GHCi} 
 and verify that \markWord{hello} is in fact just data:
 
 \begin{minted}[linenos]{haskell}
@@ -127,7 +127,7 @@ Put "What is your name?" (
   )
 )
 \end{minted}
-It will surprise no one to learn that \markWord{IOAction} is a monad. In fact we’ve already defined the necessary bind operation in \markWord{seqio}, so getting 
+It will surprise no one to learn that \markWord{IOAction} is a monad. In fact we've already defined the necessary bind operation in \markWord{seqio}, so getting 
 the \markWord{Monad} instance is trivial:
 \begin{minted}[linenos]{haskell}
 instance Monad IOAction where
@@ -135,7 +135,7 @@ instance Monad IOAction where
     (>>=)  = seqio
 \end{minted}
 
-The main benefit of doing this is that we can now sequence actions using Haskell’s\endnote{%
+The main benefit of doing this is that we can now sequence actions using Haskell's\endnote{%
   Use \macroName{progLang}!
 }
 \markWord{do} notation, which desugars into calls to \Verb!(>>=)!, and 
@@ -155,7 +155,7 @@ Remember though, that this is still just defining a value of type
 }
 no code is executed, and no effects occur! So far, this post is 100 \% pure.
 
-To see the effects, we need to define a function that takes an \markWord{IOAction} \markWord{a} and converts it into a value of type \markWord{IO} \markWord{a}, which can then be executed by the interpreter or the runtime system. It’s easy to write such a function just by turning it into the approprate calls to \markWord{putStrLn} and \markWord{getLine}.
+To see the effects, we need to define a function that takes an \markWord{IOAction} \markWord{a} and converts it into a value of type \markWord{IO} \markWord{a}, which can then be executed by the interpreter or the runtime system. It's easy to write such a function just by turning it into the approprate calls to \markWord{putStrLn} and \markWord{getLine}.
 
 \begin{minted}[linenos]{haskell}
 run :: IOAction a -> IO a
@@ -197,7 +197,7 @@ safe”\endnote{%
   The preceding character is not an \textsc{ascii} character!
 } domain-specific language.
 If a user of your program or library supplies a value of type \markWord{IOAction} \markWord{a}, you know that you are free to convert it to an \markWord{IO} \markWord{a} using run and execute it, 
-and it will never do anything except reading from \markWord{stdin} and writing to \markWord{stdout} (not that those things aren’t potentially dangerous in themselves, but…\endnote{%
+and it will never do anything except reading from \markWord{stdin} and writing to \markWord{stdout} (not that those things aren't potentially dangerous in themselves, but…\endnote{%
   The preceding character is not an \textsc{ascii} character!
   
 })
