Minor changes in toDo.tex .

--- a/toDo.tex
+++ b/toDo.tex
@@ -9,10 +9,10 @@
 \begin{scope}
 \nolinenumbers
 % ---------------------------------------------------------------------------
-\chapter{Editing to do}\label{chap:to-do}
+\chapter{Editing To Do}\label{chap:to-do}
 % ---------------------------------------------------------------------------
 
-\textit{\color{red} This Chapter needs to be removed from the final
+\textit{\color{red} This chapter needs to be removed from the final
   work.}
 
 \textbf{Meeting on 5th Novemeber 2015} 
@@ -175,46 +175,41 @@ Here are some potential keywords from Chapter 2:
 
 What is the overall message?
 
-\paragraph{A List of Colloquialisms}\label{sec:list-colloquialisms}
+\section{A List of Colloquialisms}\label{sec:list-colloquialisms}
 \begin{enumerate}
 \item
-  ``throws light on''
+  ``\textit{throws light on}''
 \item
-  another new kid on the block.
-\item
-  ``Recap'' should be ``recapitulation''.
+  ``\textit{another new kid on the block}''.
 \item
   Some expressions indicating change over time, for instance:
   \begin{compactitem}
   \item
-    day by day
+    ``\textit{day by day}''
   \item
-    over the years
+    ``\textit{over the years}''
   \item
-    many times
+    ``\textit{many times}''
   \item
-    from time to time
-  \item
+    ``\textit{from time to time}''
     \dots
   \end{compactitem}
-  are not in themselves problematic, but sometimes can be replaced by
+  are not in themselves problematic, but can be replaced by
   more precise language.
 \item
-  ``flipping the coin to the other side''---perhaps ``conversely''?
+  ``\textit{flipping the coin to the other side}''---perhaps ``\textsl{conversely}''? 
 \item 
-  bringing \dots{} onto the same plate.
+  ``\textit{bringing \dots{} onto the same plate.}''
 \item
-  job at hand
+  ``\textit{job at hand}''
 \item
-  hot topic
+  ``\textit{hot topic}''
 \item
-  faded out (when used metaphorically).
+  ``\textit{faded out}''  (when used metaphorically).
 \item
-  to play with (when meaning ``to experiment with'').
+  ``\textit{adding fuel to the fire }''
 \item
-  adding fuel to the fire 
-\item
-  push the ideas forward (do you mean popularize?).
+  ``\textit{push the ideas forward}'' (do you mean popularize?).
 \end{enumerate}
 
 \end{scope}
