removed toDo comments about "le latin".

--- a/hwh.tex
+++ b/hwh.tex
@@ -57,7 +57,7 @@ The specification is set by the programming language.
 Generally, in the case of imperative languages the control flow is sequential while for a functional language is
 recursion \cite{website:controlflowdalhousie}.
 For example, \progLang{Java} has a top down sequential execution approach.
-The declarative style consists of defining components of programs i.e.
+The declarative style consists of defining components of programs i.e.\yyy{}{\Large,}
 computations not a control flow \cite{website:declarativeprogrammingwiki}.
 
 This is where \progLang{Haskell} shines by providing something called a \textit{monad}.
