--- a/toDo.tex
+++ b/toDo.tex
@@ -45,23 +45,15 @@
   Watch out for sentences that begin with ``But''.
 
 \item
-  Search for all latin abbreviations (\textit{e.g.,} ``i.e.''), and be
-  sure that you have appropriate punctuation before and after.
-  If you are unsure of the punctuation to use, try substituting plain
-  English, \yyy{\textit{e.g.,}}{for instance} using ``that is'' in place
-  of ``i.e.''.
 
 \item
   Write enough of Chapters \ref{proto1}--\ref{proto4} that we can decide
-  what material is needed in Chapters~ \ref{chap:quasiquotation},
+  what material is needed in Chapters~\ref{chap:quasiquotation}
   and~\ref{chap:metasyntacticvariables}.
 
 
 \item [\textbf{David}]
 \item Clean up the non-exclusive license page in unbcthesis.cls
-\item Review Chapter 4
-\item Review Chapter 5
-\item Review Chapter 6
 \item Review Chapter 7
 \item Review Chapter 8
 \item ``\textit{IO}'' or ``\textit{I/O}''?  Check!
