Fixes to multiple labels, bad references.

--- a/accomplishedWork.tex
+++ b/accomplishedWork.tex
@@ -12,7 +12,7 @@
 
 \section{What this chapter is about}\label{sec:what-this-chapter:accomplishedWork}
 
-\section{Conceptual Advances beyond Section~\ref{sec:things-fixed}}\label{sec:what-this-chapter:accomplishedWork}
+\section{Conceptual Advances beyond Section~\ref{sec:things-fixed}}\label{sec:advances:accomplishedWork}
 
 \section{What the prototypes contain}
 \subsection{What Prototype 1 contains}
@@ -56,7 +56,7 @@ Most languages have a recursive abstract syntax which restricts the \yyy{eDSL}{e
   The effects are only produced only when the actions are executed.
 
 
-\section{Thesis Improved Contributions}
+\section{Thesis Improved Contributions}\label{sec:thes-impr-contr}
 
 \begin{enumerate}
 \item Prototype 1 does
@@ -88,7 +88,7 @@ statement) which when executed would result in a side effect but till that point
 \end{enumerate}
 
 
-\section{What work was done in terms of points}
+\section{What work was done in terms of points}\label{sec:work-in-points}
 \begin{enumerate}
 \item Literature review on eDSL's.
 
