--- a/proto2.tex
+++ b/proto2.tex
@@ -40,8 +40,9 @@ Figure~\ref{fig:A language-processing system}).
 \label{fig:A language-processing system}
 \end{figure}
 
-specifically speaking, parts of a compiler (see Figure~\ref{fig:Phases of Compiler}).
-%% 2016-01-16 dgc TODO the above needs to be fixed.
+specifically speaking, parts of a compiler (see Figure~\ref{fig:Phases of Compiler}).\endnote{%
+  There is a stranded sentence fragment here.  Fix.
+}
 
 \begin{figure}[H]
 \centering
