--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -82,7 +82,7 @@ Often this function itself is called the algebra, hence my use of the name alg i
     \inputminted[linenos, firstline=35, lastline=65]{haskell}{haskell-monad-working-2.hs}
   \end{singlespace}
   \caption{Haskell Monad Working: Functions 1}
-\label{tab:hskllmndworkngfunctions}
+\label{tab:hskllmndworkngfunctions1}
 \end{code-list}
 
 \begin{code-list}[H]
@@ -90,7 +90,7 @@ Often this function itself is called the algebra, hence my use of the name alg i
     \inputminted[linenos, firstline=60, lastline=94]{haskell}{haskell-monad-working-2.hs}
   \end{singlespace}
   \caption{Haskell Monad Working: Functions 2}
-\label{tab:hskllmndworkngfunctions}
+\label{tab:hskllmndworkngfunctions2}
 \end{code-list}
 
 \begin{code-list}[H]
